# azure_sky_ros2

./: .gitignore  README.md  current_urdf.xml  frames_2025-09-17_12.04.21.gv  frames_2025-09-17_17.15.40.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/armor_detector/lib/armor_detector/: armor_detector_node
install/armor_detector/share/armor_detector/: local_setup.sh  package.sh
install/armor_tracker/lib/armor_tracker/: armor_tracker_node
install/armor_tracker/share/armor_tracker/: package.sh
install/auto_aim_interfaces/share/auto_aim_interfaces/: local_setup.sh  package.sh
install/autoaim_bridge/include/autoaim_bridge/: autoaim_bridge.hpp
install/autoaim_bridge/lib/autoaim_bridge/: autoaim_bridge_node
install/tide_gimbal_controller/include/: bullet_solver.hpp  tide_gimbal_controller.hpp
install/tide_shooter_controller/include/: tide_shooter_controller.hpp
log/: latest_build  latest_graph  latest_list
src/: README.md
src/auto_aim/: CMakeLists.txt  README.md  auto_aim.sln  auto_aim.vcxproj  auto_aim.vcxproj.filters  package.xml
src/auto_aim/controler/: Controler.cpp  Controler.h  TransControler.h
src/auto_aim/controler/PitchCompensator/: PitchCompensator.cpp  PitchCompensator.h
src/auto_aim/controler/RangeSetter/: RangeSetter.cpp  RangeSetter.h
src/auto_aim/controler/SerialModule/: Serial.cpp  Serial.h  SerialFuc.h
src/auto_aim/controler/ShootStrategy/: ShootStrategy.cpp  ShootStrategy.h
src/auto_aim/controler/ShootStrategy/StrategyPlanner/: StrategyPlanner.cpp  StrategyPlanner.h
src/auto_aim/controler/TimePredictor/: TimePredictor.cpp  TimePredictor.h
src/auto_aim/detector/: Detector.cpp  Detector.h  TransDetector.h
src/auto_aim/detector/Armor/: Armor.cpp  Armor.h
src/auto_aim/detector/ArmorFinder/: ArmorFinder.cpp  ArmorFinder.h
src/auto_aim/detector/Light/: Light.cpp  Light.h
src/auto_aim/detector/LightFinder/: LightFinder.cpp  LightFinder.h
src/auto_aim/detector/Machine/: Machine.cpp  Machine.h
src/auto_aim/detector/NumberFinder/: NumberFinder.cpp  NumberFinder.h
src/auto_aim/detector/Video/: Video.cpp  Video.h
src/auto_aim/detector/YoloModel/: YoloModel.cpp  YoloModel.h
src/auto_aim/node/: DetectorNode.cpp  ProcessorNode.cpp  SerialReadNode.cpp  SerialSendNode.cpp
src/auto_aim/processor/: Processor.cpp  Processor.h  TransProcessor.h
src/auto_aim/processor/ArmorPos/: ArmorPos.h
src/auto_aim/processor/ArmorSolver/: ArmorSolver.cpp  ArmorSolver.h
src/auto_aim/processor/ArmorSolver/FaceAngleSolver/: FaceAngleSolver.cpp  FaceAngleSolver.h
src/auto_aim/processor/CarSolver/: AdaptiveEKF.h  CarSolver.cpp  CarSolver.h
src/auto_aim/processor/CarSolver/CarState/: CarState.cpp  CarState.h
src/auto_aim/processor/CarSolver/CarState/ExtendEkfCarState/: ExtendEkfCarState.cpp  ExtendEkfCarState.h
src/auto_aim/processor/CarSolver/DataObserver/: DataObserver.cpp  DataObserver.h
src/auto_aim/processor/CarSolver/Ekf/: Ekf.cpp  Ekf.h
src/auto_aim/processor/CarSolver/TranslationState/: TranslationState.cpp  TranslationState.h
src/auto_aim/processor/CarSolver/TranslationState/ExtendTranslationState/: ExtendTranslationState.cpp  ExtendTranslationState.h
src/auto_aim/processor/Coordinate/: Coordinate.cpp  Coordinate.h
src/auto_aim/processor/TargetPlanner/: TargetPlanner.cpp  TargetPlanner.h
src/auto_aim/sample/: debug.h  detect_test.cpp  process_test.cpp
src/auto_aim_bringup/: package.xml
src/auto_aim_bringup/config/: camera_calibration.txt  camera_calibration.yaml  default.yaml
src/auto_aim_bringup/launch/: debug.py  detector_sample.py  hik_serial.py
src/auto_aim_debug/: CMakeLists.txt  package.xml
src/auto_aim_debug/node/: auto_aim_debug_node.cpp
src/auto_aim_debug/src/Color/: Color.h
src/auto_aim_debug/src/ImageShower/: ImageShower.cpp  ImageShower.h
src/auto_aim_debug/src/Tools/: Tools.cpp  Tools.h
src/auto_aim_debug/src/VideoDownloader/: VideoDownloader.cpp  VideoDownloader.h
src/auto_aim_debug/src/debugger/: Debugger.cpp  Debugger.h
src/auto_aim_interfaces/: CMakeLists.txt  package.xml
src/auto_aim_interfaces/msg/: DebugArmor.msg  DebugCar.msg  DebugDetector.msg  DebugFaceAngle.msg  DebugProcessor.msg  SendArmor.msg  SerialReadData.msg  SerialSendData.msg  TransDetector.msg
src/auto_aim_publisher/: CMakeLists.txt  package.xml
src/auto_aim_publisher/src/: send_debug_detector_node.cpp  send_debug_processor_node.cpp  send_image_node.cpp  send_serial_read_data_node.cpp
src/auto_aim_publisher/videos/: sample.avi
src/autoaim_bridge/: CMakeLists.txt  package.xml
src/autoaim_bridge/include/autoaim_bridge/: autoaim_bridge.hpp
src/autoaim_bridge/src/: autoaim_bridge_node.cpp
src/controlko_bringup/config/: rrbot_controllers.yaml  test_goal_publishers_config.yaml
src/controlko_bringup/launch/: rrbot.launch.py  rrbot_real.launch.py  rrbot_sim_gazebo.launch.py  rrbot_sim_gazebo_classic.launch.py  soho-12.launch.py
src/my_hardware_interface/: CMakeLists.txt  my_hardware_interface.xml  package.xml
src/my_hardware_interface/include/my_hardware_interface/: custom_mecanum_controller.hpp  remote_controller.hpp  rrbot_hardware_interface.hpp  tide_motor.hpp
src/my_hardware_interface/src/: custom_mecanum_controller.cpp  remote_controller.cpp  rrbot_hardware_interface.cpp  tide_motor.cpp
src/my_hardware_interface/urdf/: rrbot.urdf.xacro
src/my_hardware_interface/urdf/rrbot/: rrbot_macro.ros2_control.xacro  rrbot_macro.xacro
src/rm_auto_aim/armor_tracker/: CMakeLists.txt  package.xml
src/rm_auto_aim/armor_tracker/include/armor_tracker/: tracker_node.hpp
src/rm_auto_aim/armor_tracker/src/: tracker_node.cpp
src/rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
src/rm_can_driver/: CMakeLists.txt  package.xml
src/rm_can_driver/src/: rm_can_driver.cpp
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/ros2_hik_camera/config/: camera_info.yaml
src/tide_controllers/tide_gimbal_controller/: CMakeLists.txt  package.xml
src/tide_msgs/: CMakeLists.txt  package.xml
src/tide_msgs/msg/vision/: TrackerInfo.msg
(+999 files in other folders)
