<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_can_driver</name>
  <version>0.0.0</version>
  <description>RM CAN Driver for receiving robot status via CAN bus</description>
  <maintainer email="jiayudw0395@gmail.com">jiayudw</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_socketcan</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>