<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tide_msgs</name>
  <version>0.0.0</version>
  <description>Custom message definitions for tide project</description>
  <maintainer email="1484237245@qq.com">qinghuan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++和Python接口生成 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 消息依赖 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- 确保C++代码生成依赖 -->
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

